# co4-dialect

./: CMakeLists.txt  README.md  victor_license.rtf
.github/workflows/: build-and-test.yml
co4-opt/: CMakeLists.txt  co4-opt.cpp
include/: CMakeLists.txt
include/Co4HL/: CMakeLists.txt  Co4HLDialect.h  Co4HLDialect.td  Co4HLOps.h  Co4HLOps.td  Lower.h
include/Co4LL/: BufAlloc.h  CMakeLists.txt  Co4LLDialect.h  Co4LLDialect.td  Co4LLOps.h  Co4LLOps.td  EmitXML.h  LinkByGPUID.h  ThreadblockSSA.h
include/Standalone/: CMakeLists.txt  EmitXML.h  StandaloneDialect.td  StandaloneOps.td
lib/Co4HL/: CMakeLists.txt  Co4HLDialect.cpp  Co4HLOps.cpp  Lower.cpp
lib/Co4LL/: BufAlloc.cpp  CMakeLists.txt  Co4LLDialect.cpp  Co4LLOps.cpp  EmitXML.cpp  LinkByGPUID.cpp  ThreadblockSSA.cpp  Utils.h
lib/Standalone/: CMakeLists.txt  EmitXML.cpp  StandaloneDialect.cpp
standalone-opt/: standalone-opt.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Co4HL/: adam-sized-allreduce.mlir  adam-sized.mlir  adam.mlir  dummy.mlir
test/Co4LL/: adam-comp.mlir  adam-separate-tb.mlir  adam.mlir  dummy.mlir
test/Standalone/: adam-comp.mlir  dummy.mlir
